css: fix roadmap icon spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -3590,6 +3590,7 @@ img.emoji {
 
 .roadmap li.completed:before {
   content: url("/img/emojis/2714.png");
+  width: fit-content;
 }
 
 .roadmap li.ongoing:before {
